--- a/index.html
+++ b/index.html
@@ -1,40 +1,79 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 
-		<title>reveal.js</title>
+    <title>reveal.js</title>
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+    <link rel="stylesheet" href="dist/reset.css" />
+    <link rel="stylesheet" href="dist/reveal.css" />
+    <link rel="stylesheet" href="dist/theme/beige.css" />
 
-		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+    <!-- Theme used for syntax highlighted code -->
+    <link rel="stylesheet" href="plugin/highlight/monokai.css" />
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+        <section>
+          <h2>Hello Denis</h2>
+					<p>
+						Today I have an interesting story to share with you.
+					</p>
+          <img src="./image/story.jpg" width="400" height="268">
+        </section>
+        <section>
+          <h2>www.awwwards.com. </h2>
+          <p>It's an online catalog showcasing the best websites, honoring the creative and innovative works of web designers and developers. Here, you can find numerous examples of creative web design, animations, and visual effects that leave a lasting impression. <p>
+        </section>
+        <section>
+          <h2>WebGL</h2>
+          <p>WebGL brings plugin-free 3D to the web, implemented right into the browser. <p>
+          <img src="./image/webGL.png" width="800" height="300">
+        </section>
+        <section>
+          <h2>OpenGL</h2>
+          <p>At the core of WebGL lies the OpenGL API, which grants access to the hardware capabilities of the user's graphics card. <p>
+          <img src="./image/openGL.jpg" width="480" height="360">
+        </section>
+        <section>
+          <h2>Three.js</h2>
+          <p>Three.js is an open-source JavaScript library that provides tools for creating and rendering three-dimensional scenes and objects directly in a web browser. <p>
+          <img src="./image/threejs.png" width="400" height="387">
+        </section>
+        <section>
+          <ul>The three pillars on which Three.js stands are:
+            <li>Scene</li>
+            <li>Camera</li>
+            <li>Renderer</li>
+          </ul>
+          <img src="./image/whale.jpg" width="450" height="298">
+        </section>
+        <section>
+          <h2>Thank you for joining me on this exploration of Three.js and WebGL.</h2>
+          <img src="./image/end.jpg" width="375" height="328">
+        </section>
+      </div>
+    </div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
-			Reveal.initialize({
-				hash: true,
+    <script src="dist/reveal.js"></script>
+    <script src="plugin/notes/notes.js"></script>
+    <script src="plugin/markdown/markdown.js"></script>
+    <script src="plugin/highlight/highlight.js"></script>
+    <script>
+      // More info about initialization & config:
+      // - https://revealjs.com/initialization/
+      // - https://revealjs.com/config/
+      Reveal.initialize({
+        hash: true,
 
-				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-			});
-		</script>
-	</body>
+        // Learn about plugins: https://revealjs.com/plugins/
+        plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
+      });
+    </script>
+  </body>
 </html>
